<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- string to name of the app and activities -->
    <string name="app_name">Polen Alert</string>

    <!-- strings for language -->
    <string name="lang_tittle">Choose the language:</string>
    <string name="action_language">Language</string>

    <!-- This is the array with the availables languages -->
    <string-array name="androidlanguages">
        <item name="en">English</item>
        <item name="es">Spanish</item>
    </string-array>

    <!-- strings for the Main activity -->
    <string name="new_track">New Track</string>
    <string name="list_track">List Tracks</string>
    <string name="show_map">Show Pollen Map</string>
    <string name="observer">Observer Mode</string>

    <!-- strings for the NewTrack activity -->
    <string name="name">Name:</string>
    <string name="newtrack_comments">Comments:</string>
    <string name="manually">Create manually -></string>
    <string name="nextGps">Use Gps -></string>
    <string name="name_empty">The name value can\'t be empty</string>

    <!-- strings for the GpsController activity -->
    <string name="gps_location">Your location is:</string>
    <string name="not_supported">This device is not supported by Google Play Services.</string>
    <string name="still_activating">Gps still starting, refresh this screen.</string>
    <string name="paused">Track paused.</string>
    <string name="next">Next -></string>
    <string name="ready">Gps ready. Please press start.</string>
    <string name="changed">Location changed!</string>
    <string name="gps_wait">Please wait a few seconds, gps starting.</string>

    <!-- strings for the FinalTrack activity -->
    <string name="final_location">You\'ve been through ::</string>
    <string name="cancel_track">Cancel</string>
    <string name="accept_track">Accept</string>

    <!-- strings for the List activity -->
    <string name="list_track_name">Created tracks: </string>
    <string name="created">created</string>
    <string name="to_hour">Hour:</string>
    <string name="point">Point:</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="and">and</string>

    <!-- strings for the Detailed activity -->
    <string name="delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="track">Track</string>
    <string name="newtrack_date">Start Date:</string>
    <string name="newtrack_hour">Start Hour:</string>
    <string name="not_get_location">(Couldn\'t get the location. Make sure location is enabled on the device)</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_show_map">ShowMapActivity</string>
    <string name="title_activity_final_track">FinalTrack</string>
    <string name="title_activity_observer">Observer</string>
    <string name="pollen">Pollen at your sides</string>
    <string name="title_activity_detailed_list">DetailedList</string>
    <string name="title_activity_observer_mode">ObserverMode</string>
    <string name="title_activity_get_file">GetFile</string>
    <string name="title_activity_manual_controller">ManualController</string>

</resources>
