<!-- Layout to the main activity of the app -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:paddingTop="16dp"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainController"
    android:background="@drawable/bg">

    <!-- LinearLayout to hold the buttons in bottom side -->
    <LinearLayout
        android:id="@+id/LayoutBottomButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <!-- Button: new track -->
        <Button android:id="@+id/button_new_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:text="@string/new_track"
            android:onClick="NewTrack"/>

        <!-- Button: observer mode -->
        <Button android:id="@+id/button_observer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_custom"
            android:text="@string/observer"
            android:onClick="Observer"/>

        <!-- Button: list tracks -->
        <Button android:id="@+id/button_list_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_custom"
            android:text="@string/list_track"
            android:onClick="ListTrack"/>

        <!-- Button: show pollen map -->
        <Button android:id="@+id/button_show_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_custom"
            android:text="@string/show_map"
            android:onClick="ShowMap"/>

    </LinearLayout>

</RelativeLayout>
