<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/bg_light"
    tools:context=".DetailedController">

    <!-- Linear layout to hold the text boxes in top side -->
    <LinearLayout
        android:id="@+id/FinalTrackLayoutTopButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <!-- TextViews to show the name selected -->
        <TextView android:id="@+id/final_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/name"
            android:textStyle="bold"/>

        <TextView android:id="@+id/final_name_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" />

        <!-- TextViews to show the comment wrote -->
        <TextView android:id="@+id/final_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/newtrack_comments"
            android:textStyle="bold"/>

        <TextView android:id="@+id/final_comment_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" />

        <TextView android:id="@+id/final_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/final_location"
            android:textStyle="bold"/>

        <ListView
            android:id="@+id/list_point"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"/>

    </LinearLayout>

    <!-- LinearLayout to hold the buttons in bottom side -->
    <LinearLayout
        android:id="@+id/LayoutBottomButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <!-- Button: accept track -->
        <Button android:id="@+id/button_accept_final"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:text="@string/delete"
            android:onClick="Delete"/>

        <!-- Button: cancel track -->
        <Button android:id="@+id/button_cancel_final"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:layout_marginTop="5dp"
            android:text="@string/cancel_track"
            android:onClick="Cancel"/>



    </LinearLayout>

</RelativeLayout>