<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/bg15"
    tools:context=".NewTrackController">

    <!-- Linear layout to hold the text boxes in top side -->
    <LinearLayout
        android:id="@+id/LayoutTopButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

    <!-- TextView and EditText to enter the name -->
    <TextView android:id="@+id/newtrack_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="#0d47a1"/>

    <EditText android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_gravity="center"
        android:textColor="#0d47a1"/>

    <!-- TextView and EditText to enter comments -->
    <TextView android:id="@+id/newtrack_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/newtrack_comments"
        android:textStyle="bold"
        android:textColor="#0d47a1"/>

    <EditText android:id="@+id/edit_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_gravity="center"
        android:textColor="#0d47a1"/>

    </LinearLayout>

    <!-- LinearLayout to hold the buttons in bottom side -->
    <LinearLayout
        android:id="@+id/LayoutBottomButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

    <!-- Button: new track using google play services -->
    <Button android:id="@+id/button_start_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:text="@string/manually"
        android:onClick="nextManual"/>

        <!-- Button: new track using gps -->
        <Button android:id="@+id/button_start_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_custom"
            android:text="@string/nextGps"
            android:onClick="nextGps"/>

    </LinearLayout>

</RelativeLayout>
